<resources>
    <string name="app_name">Meta Ideas</string>
    <string name="meta_ideas">Meta Ideas</string>
    <string name="pleas_enter_your_email_address">Pleas enter your email address</string>
    <string name="pleas_enter_your_password">pleas enter your password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_an_account">Create an account</string>
    <string name="remember_me">Remember me</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="enter_your_full_name">Enter your Full name</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="if_our_forget_your_password_pleas_enter_your_email_address_and_we_will_send_your_resseting_password_link">If our forget your password, pleas enter your email address and we will send your resseting password link</string>
    <string name="send_resseting_link">send resseting link</string>
    <string name="welcome_to_meta_ideas_app">Welcome to Meta Ideas App</string>
    <string name="enter_your_first_number">Enter your first number</string>
    <string name="enter_your_second_number">Enter your second number</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="the_result_will_appear_here">The result will appear here</string>
    <string name="result_values">result values</string>
    <string name="calculator_app">Calculator app</string>
    <string name="random_highest_mountains">Random Highest Mountains</string>
    <string name="everest_mountain">Everest Mountain</string>
    <string name="welcome_random_highest_app">Welcome Random Highest App</string>
    <string name="random_mountains">Random Mountains</string>
    <string name="generate_random_mountain">generate random mountain</string>
    <string name="pizza">Pizza</string>
    <string name="_30">30$</string>
    <string name="burger">Burger</string>
    <string name="_35">35$</string>
    <string name="fried_chicken">Fried chicken</string>
    <string name="_25">25$</string>
    <string name="salad">Salad</string>
    <string name="_5">5$</string>
    <string name="pepsi">pepsi</string>
    <string name="_6">6$</string>
    <string name="tea">Tea</string>
    <string name="_3">3$</string>
    <string name="coffee">Coffee</string>
    <string name="_12">12$</string>
    <string name="anise">Anise</string>
    <string name="_2">2$</string>
    <string name="get_invoice">Get Invoice</string>
    <string name="the_invoice_will_appear_hear">The invoice will appear hear</string>
    <string name="restaurant_app">restaurant app</string>
    <string name="welcome_to_dog_or_cat_quiz">Welcome to Dog Or Cat Quiz</string>
    <string name="dog_or_cat_image">Dog or Cat Image</string>
    <string name="when_talking_to_someone_do_you_maintain_eye_contact">When talking to someone do you maintain eye contact?</string>
    <string name="never">never</string>
    <string name="some_times">some times</string>
    <string name="always">Always</string>
    <string name="how_often_do_you_hug_people">How often do you hug people?</string>
    <string name="all_the_time">All the time!</string>
    <string name="i_m_not_a_very_physical_person">not physical person</string>
    <string name="how_do_you_feel_about_tv">How do you feel about TV?</string>
    <string name="occassionally">occassionally</string>
    <string name="many_times">many times</string>
    <string name="maybe">Maybe</string>
    <string name="no">no</string>
    <string name="get_quiz_result">Get quiz result</string>
    <string name="the_result_will_appear_hear">The result will appear hear</string>
    <string name="dog_or_cat_quiz">Dog Or Cat Quiz</string>
    <string name="java_to_point_website">Java to Point website</string>
    <string name="mohammed_cv">Mohammed cv</string>
    <string name="welcome_to_temperature_converter_app">Welcome to Temperature Converter App</string>
    <string name="temp_converter">Temp converter</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="convert">Convert</string>
    <string name="reset_values">Reset values</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="media_player">Media Player</string>
    <string name="exoplayer">ExoPlayer</string>
    <string name="o">o</string>
    <string name="the_winner_is">The Winner is:</string>
    <string name="play_again">Play Again</string>
    <string name="connect3">Connect3</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fakeapi">Fake API</string>
</resources>