<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RestaurantActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Welcome to our Restaurant"
        android:textColor="@color/purple_700"
        android:textSize="27sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_30" />

            <CheckBox
                android:id="@+id/chk_burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_35" />

            <CheckBox
                android:id="@+id/chk_chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fried_chicken" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_25" />

            <CheckBox
                android:id="@+id/chk_salad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_pepsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepsi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_6" />

            <CheckBox
                android:id="@+id/chk_tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_3" />

            <CheckBox
                android:id="@+id/chk_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_12" />

            <CheckBox
                android:id="@+id/chk_anise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anise" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_2" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_getInvoice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/get_invoice" />

    <TextView
        android:id="@+id/tv_invoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/the_invoice_will_appear_hear"
        android:textColor="@color/black"
        android:textSize="15sp" />
</LinearLayout>