<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/twitter"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/twitter_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_our_forget_your_password_pleas_enter_your_email_address_and_we_will_send_your_resseting_password_link"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pleas_enter_your_email_address"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/btnSendRestLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/send_resseting_link"/>


</LinearLayout>