<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RandomHighestMountains">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_random_highest_app"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_700" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/everest_mountain"
        android:src="@drawable/everest" />

    <TextView
        android:id="@+id/tv_randomMountain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/random_mountains"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_generateRandomMountain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/generate_random_mountain"
        android:textSize="12sp" />
</LinearLayout>